# cc-pbt-workshop-backend

./: .gitignore  README.md  conftest.py  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
ex1_invariants/: apps.py  models.py
ex1_invariants/migrations/: 0001_initial.py
ex1_invariants/solutions/: test_invariants_solved.py
ex1_invariants/tests/: conftest.py  test_invariants.py
ex2_workflow/: apps.py  models.py
ex2_workflow/migrations/: 0001_initial.py
ex2_workflow/solutions/: test_workflow_solved.py
ex2_workflow/tests/: conftest.py  test_workflow.py
ex3_robustness/: apps.py  models.py
ex3_robustness/migrations/: 0001_initial.py
ex3_robustness/solutions/: test_robustness_solved.py
ex3_robustness/tests/: conftest.py  test_robustness.py
shared/: exceptions.py
workshop/: settings.py  urls.py
